--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
         <div id="generateTab" class="tab-content active">
             <h1>Ohuhu Palette Generator</h1>
-            <p class="subtitle">by Didi Plums style • 216 Honolulu B colors</p>
+            <p class="subtitle">216 Honolulu B colors</p>
             
             <div class="controls">
                 <div class="control-group">
