--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
             border-radius: 12px;
             padding: 40px;
             margin-bottom: 30px;
+            max-height: 60vh;
+            display: flex;
+            flex-direction: column;
         }
 
         .palette {
@@ -179,12 +182,14 @@
             flex-direction: column;
             gap: 15px;
             margin-bottom: 20px;
+            flex: 1;
         }
 
         .color-swatch {
             position: relative;
             width: 100%;
-            height: 120px;
+            flex: 1;
+            min-height: 80px;
             border-radius: 12px;
             cursor: grab;
             transition: all 0.3s;
